<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HalamanMenuActivity"
    style="@style/Layout2"
    tools:ignore="UseCompoundDrawables">
    
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comicneue_bold"
        android:text="@string/pilih_lawanmu"
        android:textSize="28sp"
        android:textColor="@color/black"/>

    <ImageView
        android:contentDescription="@string/player_vs_player"
        android:id="@+id/ivPlayerVsPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="138dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/landing_page1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvNamaPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicneue_bold"
            android:text=""
            android:layout_weight="1"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicneue_bold"
            android:layout_weight="1"
            android:text=" vs Player"
            android:textSize="22sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/player_vs_cpu"
        android:id="@+id/ivPlayerVsCPU"
        android:layout_width="wrap_content"
        android:layout_height="138dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/landing_page2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvNamaPlayerInCPUMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comicneue_bold"
            android:layout_weight="1"
            android:text=""
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" vs CPU"
            android:fontFamily="@font/comicneue_bold"
            android:textSize="22sp"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>